--- a/build.gradle
+++ b/build.gradle
@@ -733,8 +733,12 @@ task docsZip(type: Zip) {
 			exclude '*.pdf'
 			exclude '*.html'
 			exclude 'images'
+			exclude 'jsfiles'
+			exclude 'tocbot-3.0.2'
 			exclude  'html/index-pdf.html'
 			exclude 'pdf/images'
+			exclude 'pdf/jsfiles'
+			exclude 'pdf/tocbot-3.0.2'
 			exclude 'pdf/appendix.pdf'
 			exclude 'pdf/common-patterns.pdf'
 			exclude 'pdf/domain.pdf'
