Rollback release and fix gradle POM generation
This commit rolls back the incrementing of the Spring Batch version to
4.0.1.BUILD-SNAPSHOT.

It also fixes the POM generation in spring-batch-docs to include a name
and description (previously missing and causing a release to central to
fail).

--- a/build.gradle
+++ b/build.gradle
@@ -382,7 +382,7 @@ project('spring-batch-infrastructure') {
 }
 
 project('spring-batch-docs') {
-
+	description = 'Spring Batch Docs'
 }
 
 project('spring-batch-core-tests') {
