Add "Mahmoud Ben Hassine" to the developers list

--- a/publish-maven.gradle
+++ b/publish-maven.gradle
@@ -83,6 +83,11 @@ def customizePom(pom, gradleProject) {
 					name = 'Chris Schaefer'
 					email = 'cschaefer@pivotal.io'
 				}
+				developer {
+					id = 'benas'
+					name = 'Mahmoud Ben Hassine'
+					email = 'mbenhassine@pivotal.io'
+				}
 			}
 		}
 	}
