--- a/build.gradle
+++ b/build.gradle
@@ -489,13 +489,13 @@ project('spring-batch-test') {
 		compile project(":spring-batch-core")
 
 		compile "junit:junit:${junitVersion}"
-		compile "org.hamcrest:hamcrest-library:$hamcrestVersion"
 		compile "org.springframework:spring-test:$springVersion"
 		compile "org.springframework:spring-jdbc:$springVersion"
 		compile "commons-io:commons-io:$commonsIoVersion"
 		compile "commons-collections:commons-collections:$commonsCollectionsVersion"
 
-        testCompile "org.apache.commons:commons-dbcp2:$commonsDdbcpVersion"
+		testCompile "org.hamcrest:hamcrest-library:$hamcrestVersion"
+		testCompile "org.apache.commons:commons-dbcp2:$commonsDdbcpVersion"
 		testCompile "org.hsqldb:hsqldb:$hsqldbVersion"
 
 		optional "org.aspectj:aspectjrt:$aspectjVersion"
