Upgrade jacoco to version 0.8.2

--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 	apply plugin: 'merge'
 
 	jacoco {
-		toolVersion = "0.7.6.201602180812"
+		toolVersion = "0.8.2"
 	}
 
     compileJava {
