--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ allprojects {
 		gsonVersion = '2.8.5'
 		javaMailVersion = '1.6.0'
 		javaxBatchApiVersion = '1.0'
+		javaxAnnotationApiVersion = '1.3.2'
 		javaxInjectVersion = '1'
 		javaxTransactionVersion = '1.2'
 		jbatchTckSpi = '1.0'
@@ -288,6 +289,7 @@ project('spring-batch-core') {
 		optional "org.springframework:spring-jdbc:$springVersion"
 		optional "org.apache.logging.log4j:log4j-api:$log4jVersion"
 		optional "org.apache.logging.log4j:log4j-core:$log4jVersion"
+		optional "javax.annotation:javax.annotation-api:$javaxAnnotationApiVersion"
 		// JSR-305 only used for non-required meta-annotations
 		compileOnly("com.google.code.findbugs:jsr305:3.0.2")
 		testCompileOnly("com.google.code.findbugs:jsr305:3.0.2")
