--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ allprojects {
 		springDataMongodbVersion = '2.2.0.M3'
 		springDataNeo4jVersion = '5.2.0.M3'
 		springIntegrationVersion = '5.2.0.M1'
+		springKafkaVersion = '2.2.5.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.9'
@@ -380,6 +381,7 @@ project('spring-batch-infrastructure') {
         optional "org.springframework.ldap:spring-ldap-core:$springLdapVersion"
         optional "org.springframework.ldap:spring-ldap-core-tiger:$springLdapVersion"
         optional "org.springframework.ldap:spring-ldap-ldif-core:$springLdapVersion"
+		optional "org.springframework.kafka:spring-kafka:$springKafkaVersion"
 		// JSR-305 only used for non-required meta-annotations
 		compileOnly("com.google.code.findbugs:jsr305:3.0.2")
 		testCompileOnly("com.google.code.findbugs:jsr305:3.0.2")
