--- a/build.gradle
+++ b/build.gradle
@@ -46,35 +46,35 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.0.RELEASE'
+		springVersionDefault = '5.1.2.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.2.RELEASE'
-		springAmqpVersion = '2.1.0.RC1'
-		springDataCommonsVersion = '2.1.0.RC2'
-		springDataGemfireVersion = '2.1.0.RC2'
-		springDataJpaVersion = '2.1.0.RC2'
-		springDataMongodbVersion = '2.1.0.RC2'
-		springDataNeo4jVersion = '5.1.0.RC2'
-		springIntegrationVersion = '5.1.0.RC1'
+		springAmqpVersion = '2.1.0.RELEASE'
+		springDataCommonsVersion = '2.1.2.RELEASE'
+		springDataGemfireVersion = '2.1.2.RELEASE'
+		springDataJpaVersion = '2.1.2.RELEASE'
+		springDataMongodbVersion = '2.1.2.RELEASE'
+		springDataNeo4jVersion = '5.1.2.RELEASE'
+		springIntegrationVersion = '5.1.0.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.6'
-		aspectjVersion = '1.9.1'
+		activemqVersion = '5.15.7'
+		aspectjVersion = '1.9.2'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '2.5.0'
 		commonsIoVersion = '2.6'
-		commonsLangVersion = '3.8'
+		commonsLangVersion = '3.8.1'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.2'
+		groovyVersion = '2.5.3'
 		hamcrestVersion = '1.3'
 		h2databaseVersion = '1.4.197'
-		hibernateVersion = '5.3.6.Final'
-		hibernateValidatorVersion = '6.0.12.Final'
+		hibernateVersion = '5.3.7.Final'
+		hibernateValidatorVersion = '6.0.13.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.4.1'
-		jackson2Version = '2.9.6'
+		jackson2Version = '2.9.7'
 		gsonVersion = '2.8.5'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -86,20 +86,21 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
 		log4jVersion = '2.11.1'
-		mysqlVersion = '8.0.12'
-		mockitoVersion = '2.22.0'
+		mysqlVersion = '8.0.13'
+		mockitoVersion = '2.23.0'
 		postgresqlVersion = '42.2.5'
 		quartzVersion = '2.3.0'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.23.1'
+		sqliteVersion = '3.25.2'
 		woodstoxVersion = '5.0.3'
 		xercesVersion = '2.11.0' //?
 		xmlunitVersion = '2.6.2'
 		xstreamVersion = '1.4.10'
 		jrubyVersion = '1.7.26'
 		beanshellVersion = '2.0b5'
-		jaxbVersion = '2.3.0'
+		jaxbApiVersion = '2.3.1'
+		jaxbImplVersion = '2.3.0.1'
 	}
 
 	apply plugin: 'idea'
@@ -325,7 +326,7 @@ project('spring-batch-infrastructure') {
 		testCompile "org.aspectj:aspectjweaver:$aspectjVersion"
 		testCompile "org.mockito:mockito-core:$mockitoVersion"
 		testCompile "org.xerial:sqlite-jdbc:$sqliteVersion"
-		testCompile "javax.xml.bind:jaxb-api:$jaxbVersion"
+		testCompile "javax.xml.bind:jaxb-api:$jaxbApiVersion"
 
 		testRuntime "com.sun.mail:javax.mail:$javaMailVersion"
 		testRuntime "org.codehaus.groovy:groovy-jsr223:$groovyVersion"
@@ -333,8 +334,8 @@ project('spring-batch-infrastructure') {
 		testRuntime "org.hibernate.validator:hibernate-validator:$hibernateValidatorVersion"
 		testRuntime "org.glassfish:javax.el:$javaxElVersion"
 		testRuntime "org.beanshell:bsh:$beanshellVersion"
-		testRuntime "com.sun.xml.bind:jaxb-core:$jaxbVersion"
-		testRuntime "com.sun.xml.bind:jaxb-impl:$jaxbVersion"
+		testRuntime "com.sun.xml.bind:jaxb-core:$jaxbImplVersion"
+		testRuntime "com.sun.xml.bind:jaxb-impl:$jaxbImplVersion"
 
 		optional "javax.jms:javax.jms-api:$jmsVersion"
 		optional "com.fasterxml.jackson.core:jackson-databind:${jackson2Version}"
@@ -476,7 +477,7 @@ project('spring-batch-infrastructure-tests') {
 		testCompile "org.springframework:spring-jdbc:$springVersion"
 		testCompile "org.springframework:spring-test:$springVersion"
 		testCompile "org.mockito:mockito-core:$mockitoVersion"
-		testCompile "javax.xml.bind:jaxb-api:$jaxbVersion"
+		testCompile "javax.xml.bind:jaxb-api:$jaxbApiVersion"
 
 		compile("org.hibernate:hibernate-core:$hibernateVersion") { dep ->
 			optional dep
@@ -622,9 +623,9 @@ project('spring-batch-samples') {
 		testRuntime "com.sun.mail:javax.mail:$javaMailVersion"
 		testRuntime "org.hibernate.validator:hibernate-validator:$hibernateValidatorVersion"
 		testRuntime "org.glassfish:javax.el:$javaxElVersion"
-		testRuntime "javax.xml.bind:jaxb-api:$jaxbVersion"
-		testRuntime "com.sun.xml.bind:jaxb-core:$jaxbVersion"
-		testRuntime "com.sun.xml.bind:jaxb-impl:$jaxbVersion"
+		testRuntime "javax.xml.bind:jaxb-api:$jaxbApiVersion"
+		testRuntime "com.sun.xml.bind:jaxb-core:$jaxbImplVersion"
+		testRuntime "com.sun.xml.bind:jaxb-impl:$jaxbImplVersion"
 
 		provided "mysql:mysql-connector-java:$mysqlVersion"
 		provided "com.h2database:h2:$h2databaseVersion"
