--- a/build.gradle
+++ b/build.gradle
@@ -46,16 +46,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.2.RELEASE'
+		springVersionDefault = '5.1.5.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.2.RELEASE'
-		springAmqpVersion = '2.1.0.RELEASE'
-		springDataCommonsVersion = '2.1.2.RELEASE'
-		springDataGemfireVersion = '2.1.2.RELEASE'
-		springDataJpaVersion = '2.1.2.RELEASE'
-		springDataMongodbVersion = '2.1.2.RELEASE'
-		springDataNeo4jVersion = '5.1.2.RELEASE'
-		springIntegrationVersion = '5.1.0.RELEASE'
+		springRetryVersion = '1.2.3.RELEASE'
+		springAmqpVersion = '2.1.4.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.2.0.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.1.3.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.8'
@@ -67,11 +67,11 @@ allprojects {
 		commonsLangVersion = '3.8.1'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.3'
+		groovyVersion = '2.5.5'
 		hamcrestVersion = '1.3'
 		h2databaseVersion = '1.4.197'
-		hibernateVersion = '5.3.7.Final'
-		hibernateValidatorVersion = '6.0.13.Final'
+		hibernateVersion = '5.4.0.Final'
+		hibernateValidatorVersion = '6.0.14.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.4.1'
 		jackson2Version = '2.9.8'
@@ -82,22 +82,22 @@ allprojects {
 		javaxInjectVersion = '1'
 		javaxTransactionVersion = '1.3'
 		jbatchTckSpi = '1.0'
-		jettisonVersion = '1.2' //?
+		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream) 
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
 		log4jVersion = '2.11.1'
 		mysqlVersion = '8.0.13'
-		mockitoVersion = '2.23.0'
+		mockitoVersion = '2.23.4'
 		postgresqlVersion = '42.2.5'
 		quartzVersion = '2.3.0'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.25.2'
-		woodstoxVersion = '5.0.3'
-		xercesVersion = '2.11.0' //?
+		woodstoxVersion = '5.2.0'
+		xercesVersion = '2.12.0' //?
 		xmlunitVersion = '2.6.2'
-		xstreamVersion = '1.4.10'
-		jrubyVersion = '1.7.26'
+		xstreamVersion = '1.4.11.1'
+		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
