--- a/build.gradle
+++ b/build.gradle
@@ -46,16 +46,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.4.RELEASE'
+		springVersionDefault = '5.1.5.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.2.RELEASE'
-		springAmqpVersion = '2.1.3.RELEASE'
-		springDataCommonsVersion = '2.1.4.RELEASE'
-		springDataGemfireVersion = '2.1.4.RELEASE'
-		springDataJpaVersion = '2.1.4.RELEASE'
-		springDataMongodbVersion = '2.1.4.RELEASE'
-		springDataNeo4jVersion = '5.1.4.RELEASE'
-		springIntegrationVersion = '5.1.2.RELEASE'
+		springRetryVersion = '1.2.3.RELEASE'
+		springAmqpVersion = '2.1.4.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.1.5.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.1.5.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.1.5.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.1.5.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.1.5.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.1.3.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.8'
