--- a/build.gradle
+++ b/build.gradle
@@ -46,32 +46,32 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.13.BUILD-SNAPSHOT'
+		springVersionDefault = '5.0.13.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.3.RELEASE'
-		springAmqpVersion = '2.0.12.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.0.14.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.0.14.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.0.14.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.0.14.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.0.14.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.0.12.BUILD-SNAPSHOT'
+		springRetryVersion = '1.2.4.RELEASE'
+		springAmqpVersion = '2.0.12.RELEASE'
+		springDataCommonsVersion = '2.0.14.RELEASE'
+		springDataGemfireVersion = '2.0.14.RELEASE'
+		springDataJpaVersion = '2.0.14.RELEASE'
+		springDataMongodbVersion = '2.0.14.RELEASE'
+		springDataNeo4jVersion = '5.0.14.RELEASE'
+		springIntegrationVersion = '5.0.13.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.8'
-		aspectjVersion = '1.8.13'
+		activemqVersion = '5.15.9'
+		aspectjVersion = '1.8.14'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '2.2.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.7'
 		commonsPoolVersion = '1.6'
-		derbyVersion = '10.14.1.0'
+		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.0-beta-1'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.197'
-		hibernateVersion = '5.2.17.Final'
-		hibernateValidatorVersion = '6.0.14.Final'
+		h2databaseVersion = '1.4.199'
+		hibernateVersion = '5.2.18.Final'
+		hibernateValidatorVersion = '6.0.16.Final'
 		hsqldbVersion = '2.4.1'
 		jackson2Version = '2.9.8'
 		javaMailVersion = '1.6.2'
@@ -85,8 +85,8 @@ allprojects {
 		log4jVersion = '2.10.0'
 		mysqlVersion = '5.1.47'
 		mockitoVersion = '2.15.0'
-		postgresqlVersion = '42.1.4'
-		quartzVersion = '2.3.0'
+		postgresqlVersion = '42.2.5'
+		quartzVersion = '2.3.1'
 		servletApiVersion = '3.1.0'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.21.0.1'
