--- a/build.gradle
+++ b/build.gradle
@@ -46,19 +46,19 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.6.BUILD-SNAPSHOT'
+		springVersionDefault = '5.1.6.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.3.RELEASE'
-		springAmqpVersion = '2.1.4.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.1.5.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.1.5.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.1.5.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.1.5.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.1.5.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.1.3.BUILD-SNAPSHOT'
+		springRetryVersion = '1.2.4.RELEASE'
+		springAmqpVersion = '2.1.5.RELEASE'
+		springDataCommonsVersion = '2.1.6.RELEASE'
+		springDataGemfireVersion = '2.1.6.RELEASE'
+		springDataJpaVersion = '2.1.6.RELEASE'
+		springDataMongodbVersion = '2.1.6.RELEASE'
+		springDataNeo4jVersion = '5.1.6.RELEASE'
+		springIntegrationVersion = '5.1.4.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.8'
+		activemqVersion = '5.15.9'
 		aspectjVersion = '1.9.2'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
@@ -67,11 +67,11 @@ allprojects {
 		commonsLangVersion = '3.8.1'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.5'
+		groovyVersion = '2.5.6'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.197'
+		h2databaseVersion = '1.4.199'
 		hibernateVersion = '5.4.0.Final'
-		hibernateValidatorVersion = '6.0.14.Final'
+		hibernateValidatorVersion = '6.0.16.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.4.1'
 		jackson2Version = '2.9.8'
@@ -85,11 +85,11 @@ allprojects {
 		jettisonVersion = '1.2' //?
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
-		log4jVersion = '2.11.1'
-		mysqlVersion = '8.0.13'
+		log4jVersion = '2.11.2'
+		mysqlVersion = '8.0.15'
 		mockitoVersion = '2.23.4'
 		postgresqlVersion = '42.2.5'
-		quartzVersion = '2.3.0'
+		quartzVersion = '2.3.1'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.25.2'
