Made the content toggle work
I had forgotten to include the JavaScript files for the content toggle (XML versus Java). I also remvoed some unneeded JS libraries.

--- a/build.gradle
+++ b/build.gradle
@@ -683,7 +683,7 @@ asciidoctor {
 	sourceDir "$buildDir/asciidoc/assemble"
 	resources {
 		from(sourceDir) {
-			include 'images/*', 'css/**', 'js/**'
+			include 'images/*', 'css/**', 'js/**', 'jsfiles/**'
 		}
 	}
 	options doctype: 'book', eruby: 'erubis'
@@ -796,6 +796,7 @@ task docsZip(type: Zip) {
 			include "*.html"
 			include "css/**"
 			include "js/**"
+			include "jsfiles/**"
 			include "images/**"
 			into 'reference'
 		}
