--- a/build.gradle
+++ b/build.gradle
@@ -46,30 +46,30 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.0.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.0.M1'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.3.RELEASE'
-		springAmqpVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.0.BUILD-SNAPSHOT'
+		springRetryVersion = '1.2.4.RELEASE'
+		springAmqpVersion = '2.2.0.M1'
+		springDataCommonsVersion = '2.2.0.M3'
+		springDataGemfireVersion = '2.2.0.M3'
+		springDataJpaVersion = '2.2.0.M3'
+		springDataMongodbVersion = '2.2.0.M3'
+		springDataNeo4jVersion = '5.2.0.M3'
 		springIntegrationVersion = '5.2.0.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.8'
-		aspectjVersion = '1.9.2'
-		commonsDdbcpVersion = '2.5.0'
+		activemqVersion = '5.15.9'
+		aspectjVersion = '1.9.3'
+		commonsDdbcpVersion = '2.6.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.8.1'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.5'
+		groovyVersion = '2.5.6'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.197'
-		hibernateVersion = '5.4.0.Final'
-		hibernateValidatorVersion = '6.0.14.Final'
+		h2databaseVersion = '1.4.199'
+		hibernateVersion = '5.4.2.Final'
+		hibernateValidatorVersion = '6.0.16.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.4.1'
 		jackson2Version = '2.9.8'
@@ -83,14 +83,14 @@ allprojects {
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
-		log4jVersion = '2.11.1'
-		mysqlVersion = '8.0.13'
-		mockitoVersion = '2.23.4'
+		log4jVersion = '2.11.2'
+		mysqlVersion = '8.0.15'
+		mockitoVersion = '2.25.1'
 		postgresqlVersion = '42.2.5'
-		quartzVersion = '2.3.0'
+		quartzVersion = '2.3.1'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.25.2'
+		sqliteVersion = '3.27.2'
 		woodstoxVersion = '5.2.0'
 		xmlunitVersion = '2.6.2'
 		xstreamVersion = '1.4.11.1'
