--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ allprojects {
 		springDataJpaVersion = '2.2.0.M3'
 		springDataMongodbVersion = '2.2.0.M3'
 		springDataNeo4jVersion = '5.2.0.M3'
-		springIntegrationVersion = '5.2.0.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.2.0.M1'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.9'
