--- a/build.gradle
+++ b/build.gradle
@@ -49,21 +49,21 @@ allprojects {
 		springVersionDefault = '5.2.0.M2'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.0.M1'
-		springDataCommonsVersion = '2.2.0.M3'
-		springDataGemfireVersion = '2.2.0.M3'
-		springDataJpaVersion = '2.2.0.M3'
-		springDataMongodbVersion = '2.2.0.M3'
-		springDataNeo4jVersion = '5.2.0.M3'
-		springIntegrationVersion = '5.2.0.M1'
-		springKafkaVersion = '2.2.5.RELEASE'
+		springAmqpVersion = '2.2.0.M2'
+		springDataCommonsVersion = '2.2.0.M4'
+		springDataGemfireVersion = '2.2.0.M4'
+		springDataJpaVersion = '2.2.0.M4'
+		springDataMongodbVersion = '2.2.0.M4'
+		springDataNeo4jVersion = '5.2.0.M4'
+		springIntegrationVersion = '5.2.0.M2'
+		springKafkaVersion = '2.3.0.M2'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.9'
 		aspectjVersion = '1.9.3'
 		commonsDdbcpVersion = '2.6.0'
 		commonsIoVersion = '2.6'
-		commonsLangVersion = '3.8.1'
+		commonsLangVersion = '3.9'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.6'
@@ -85,8 +85,8 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
 		log4jVersion = '2.11.2'
-		mysqlVersion = '8.0.15'
-		mockitoVersion = '2.25.1'
+		mysqlVersion = '8.0.16'
+		mockitoVersion = '2.27.0'
 		postgresqlVersion = '42.2.5'
 		quartzVersion = '2.3.1'
 		servletApiVersion = '4.0.1'
