Update Spring projects dependencies to latest BUILD-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -46,16 +46,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.6.RELEASE'
+		springVersionDefault = '5.1.9.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.1.5.RELEASE'
-		springDataCommonsVersion = '2.1.6.RELEASE'
-		springDataGemfireVersion = '2.1.6.RELEASE'
-		springDataJpaVersion = '2.1.6.RELEASE'
-		springDataMongodbVersion = '2.1.6.RELEASE'
-		springDataNeo4jVersion = '5.1.6.RELEASE'
-		springIntegrationVersion = '5.1.4.RELEASE'
+		springAmqpVersion = '2.1.8.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.1.9.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.1.9.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.1.9.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.1.9.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.1.9.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.1.6.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.9'
