--- a/build.gradle
+++ b/build.gradle
@@ -46,17 +46,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.0.M3'
+		springVersionDefault = '5.2.0.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.0.M3'
-		springDataCommonsVersion = '2.2.0.RC1'
-		springDataGemfireVersion = '2.2.0.RC1'
-		springDataJpaVersion = '2.2.0.RC1'
-		springDataMongodbVersion = '2.2.0.RC1'
-		springDataNeo4jVersion = '5.2.0.RC1'
-		springIntegrationVersion = '5.2.0.M3'
-		springKafkaVersion = '2.3.0.M3'
+		springAmqpVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.2.0.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.2.0.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.2.0.BUILD-SNAPSHOT'
+		springKafkaVersion = '2.3.0.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.9'
