--- a/build.gradle
+++ b/build.gradle
@@ -46,21 +46,21 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.0.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.0.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.0.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.0.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.0.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.2.0.RELEASE'
+		springDataCommonsVersion = '2.2.0.RELEASE'
+		springDataGemfireVersion = '2.2.0.RELEASE'
+		springDataJpaVersion = '2.2.0.RELEASE'
+		springDataMongodbVersion = '2.2.0.RELEASE'
+		springDataNeo4jVersion = '5.2.0.RELEASE'
+		springIntegrationVersion = '5.2.0.RELEASE'
+		springKafkaVersion = '2.3.0.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.10'
-		apacheAvroVersion ='1.9.0'
+		apacheAvroVersion ='1.9.1'
 		aspectjVersion = '1.9.4'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
@@ -70,11 +70,11 @@ allprojects {
 		groovyVersion = '2.5.8'
 		hamcrestVersion = '2.1'
 		h2databaseVersion = '1.4.199'
-		hibernateVersion = '5.4.4.Final'
+		hibernateVersion = '5.4.5.Final'
 		hibernateValidatorVersion = '6.0.17.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.9.9'
+		jackson2Version = '2.10.0'
 		gsonVersion = '2.8.5'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -88,7 +88,7 @@ allprojects {
 		log4jVersion = '2.12.1'
 		mysqlVersion = '8.0.17'
 		mockitoVersion = '3.0.0'
-		postgresqlVersion = '42.2.6'
+		postgresqlVersion = '42.2.8'
 		quartzVersion = '2.3.1'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -100,8 +100,8 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.2.0'
-		prometheusPushgatewayVersion = '0.6.0'
+		micrometerVersion = '1.3.0'
+		prometheusPushgatewayVersion = '0.7.0'
 		docResourcesVersion = '0.1.1.RELEASE'
 		assertjVersion='3.13.2'
 	}
