--- a/build.gradle
+++ b/build.gradle
@@ -46,19 +46,19 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.15.BUILD-SNAPSHOT'
+		springVersionDefault = '5.0.15.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.0.13.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.0.15.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.0.15.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.0.15.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.0.15.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.0.15.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.0.14.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.0.13.RELEASE'
+		springDataCommonsVersion = '2.0.14.RELEASE'
+		springDataGemfireVersion = '2.0.14.RELEASE'
+		springDataJpaVersion = '2.0.14.RELEASE'
+		springDataMongodbVersion = '2.0.14.RELEASE'
+		springDataNeo4jVersion = '5.0.14.RELEASE'
+		springIntegrationVersion = '5.0.14.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.9'
+		activemqVersion = '5.15.10'
 		aspectjVersion = '1.8.14'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
@@ -69,11 +69,11 @@ allprojects {
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.0-beta-1'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.199'
+		h2databaseVersion = '1.4.200'
 		hibernateVersion = '5.2.18.Final'
-		hibernateValidatorVersion = '6.0.16.Final'
+		hibernateValidatorVersion = '6.0.18.Final'
 		hsqldbVersion = '2.4.1'
-		jackson2Version = '2.9.8'
+		jackson2Version = '2.9.10'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
 		javaxInjectVersion = '1'
@@ -83,10 +83,10 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.12'
 		log4jVersion = '2.10.0'
-		mysqlVersion = '5.1.47'
+		mysqlVersion = '5.1.48'
 		mockitoVersion = '2.15.0'
-		postgresqlVersion = '42.2.5'
-		quartzVersion = '2.3.1'
+		postgresqlVersion = '42.2.8'
+		quartzVersion = '2.3.2'
 		servletApiVersion = '3.1.0'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.21.0.1'
