--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,13 @@ allprojects {
 		springVersionDefault = '5.1.12.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.1.13.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.1.10.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.1.12.RELEASE'
+		springDataCommonsVersion = '2.1.14.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.1.14.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.1.14.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.1.14.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.1.14.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.1.9.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.10'
