--- a/build.gradle
+++ b/build.gradle
@@ -46,17 +46,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.2.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.2.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.2.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.3.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.3.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.3.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.3.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.3.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.2.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.4.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.2.2.RELEASE'
+		springDataCommonsVersion = '2.2.3.RELEASE'
+		springDataGemfireVersion = '2.2.3.RELEASE'
+		springDataJpaVersion = '2.2.3.RELEASE'
+		springDataMongodbVersion = '2.2.3.RELEASE'
+		springDataNeo4jVersion = '5.2.3.RELEASE'
+		springIntegrationVersion = '5.2.2.RELEASE'
+		springKafkaVersion = '2.3.4.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
 		activemqVersion = '5.15.10'
@@ -100,7 +100,7 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.1'
+		micrometerVersion = '1.3.2'
 		prometheusPushgatewayVersion = '0.8.0'
 		docResourcesVersion = '0.1.1.RELEASE'
 		assertjVersion='3.13.2'
